@@ -17,6 +17,7 @@ v1.9.9
 ! imdb::seasons() returned wrong season count, and imdb::episodes() got messed up on airing dates
 + pilot_person: class added
 ! imdb::releaseInfo() did not recognize entries without day - fixed.
++ caching functionality added to the imdbsearch class
 
 v1.9.8 (02.12.2009)
 -------------------
